GNOME Bugzilla – Bug 727139
Passwords are not stored
Last modified: 2014-08-19 15:47:56 UTC
Using epiphany from the fedora copr http://copr.fedoraproject.org/coprs/rhughes/f20-gnome-3-12/ I notice that it will not store any passwords. I have logged in to accounts.google.com, this bugzilla and a few other places, and I have not seen any offer to store the password. The manage password dialog is also empty.
What is the output of this command? $ gsettings get org.gnome.Epiphany remember-passwords
I made sure that the "Remember password" option was checked. And the output of that command also shows that it is set in gsettngs. $ gsettings get org.gnome.Epiphany remember-passwords true
Epiphany on ArchLinux has the same Problem: https://bugs.archlinux.org/task/40542
*** Bug 727956 has been marked as a duplicate of this bug. ***
This is a regression from the multiple web processes I think. The problem is the page created notification is emitted before the service has a name, the handler on the UI process side fails to find the extension in its list and it never gets the EphyWebView::page_created_cb called, leading to the view never connecting to the form-auth-data-save-requested signal. Patch incoming.
Created attachment 280293 [details] [review] Wait for name acquisition before we register and emit notifications The UI side relies on having the name of the owner to find the extension on its linked list. If we start emiting signals before that has been acquired, we will miss page created signals.
Created attachment 280294 [details] [review] Add sanity check warning for finding extensions That will help debugging future issues with extensions not being found.
Review of attachment 280293 [details] [review]: Good catch, thank you!
Review of attachment 280294 [details] [review]: Makes sense
Attachment 280293 [details] pushed as c66c1d1 - Wait for name acquisition before we register and emit notifications Attachment 280294 [details] pushed as 6892dd5 - Add sanity check warning for finding extensions
Will this fix be available for the current version or de we have to wait for Gnome 3.14?
I also pushed it to the gnome-3-12 branch, so it should be in 3.12.2 when it gets released.
*** Bug 733860 has been marked as a duplicate of this bug. ***
*** Bug 734994 has been marked as a duplicate of this bug. ***