Wait for name acquisition before we register and emit notifications

The UI side relies on having the name of the owner to find the extension on
its linked list. If we start emiting signals before that has been acquired,
we will miss page created signals.

https://bugzilla.gnome.org/show_bug.cgi?id=727139